削除・編集機能追加

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,7 +2,11 @@
 <%= link_to "＋ カテゴリー追加", new_category_path %><br />
 <ul>
 <% @categories.each do |category| %>
-  <li><%= category.color %> <%= category.name %></li>
+  <li>
+    <%= category.color %> <%= category.name %>
+    <%= link_to "編集", edit_category_path(category.id) %>
+    <%= link_to "削除", category_path(category.id), data: { turbo_method: :delete } %>
+  </li>
 <% end %>
 </ul>
 
